--- a/Lonelysg/app/build.gradle
+++ b/Lonelysg/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:percent:28.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.0'
+    implementation 'com.google.firebase:firebase-core:17.2.3'
 }
