--- a/Lonelysg/app/src/main/AndroidManifest.xml
+++ b/Lonelysg/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".LoginPage"></activity>
+        <activity android:name=".SignUpPage"/>
         <activity android:name=".InvitationsUI" />
         <activity android:name=".MainActivity">
             <intent-filter>
