--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "firebase-admin": "^8.9.2"
+    "firebase-admin": "^8.10.0",
+    "firebase-functions": "^3.3.0"
   }
 }
