--- a/Lonelysg/app/build.gradle
+++ b/Lonelysg/app/build.gradle
@@ -41,4 +41,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'com.google.firebase:firebase-core:17.2.3'
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.pusher:push-notifications-android:1.6.2'
+    implementation 'com.google.firebase:firebase-messaging:20.1.3'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
