--- a/Lonelysg/app/src/main/AndroidManifest.xml
+++ b/Lonelysg/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".IndividialInvitationUI"></activity>
+
+        <activity android:name=".IndividialInvitationUI" />
         <activity android:name=".EditProfileUI" />
         <activity android:name=".NavigationBarUI" />
         <activity android:name=".InvitationsUI" />
@@ -21,6 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".PusherMessagingService">
+            <intent-filter android:priority="1">
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
