--- a/Lonelysg/app/build.gradle
+++ b/Lonelysg/app/build.gradle
@@ -43,4 +43,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.2.3'
     implementation 'com.elpassion.android.commons:recycler:0.0.21'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.pusher:push-notifications-android:1.6.2'
+    implementation 'com.google.firebase:firebase-messaging:20.1.3'
+
 }
