--- a/Lonelysg/app/src/main/AndroidManifest.xml
+++ b/Lonelysg/app/src/main/AndroidManifest.xml
@@ -11,20 +11,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ApiTest"></activity>
-        <activity android:name=".IndividialInvitationUI"></activity>
-        <activity android:name=".IndividualChatUI"></activity>
-        <activity android:name=".EditProfileUI" />
-        <activity android:name=".NavigationBarUI" />
-        <activity android:name=".InvitationsUI" />
-        <activity android:name=".SignUpPage" />
-        <activity android:name=".LoginUI">
+        <activity android:name=".Activities.PendingRequestsUI"></activity>
+        <activity android:name=".Activities.ReceivedRequestsUI" />
+        <activity android:name=".Activities.ManageRequestsUI" />
+        <activity android:name=".Activities.UserInvitationsUI" />
+        <activity android:name=".Activities.CreateInvitationUI" />
+        <activity android:name=".Activities.ManageInvitationsUI" />
+        <activity android:name=".Activities.IndividualInvitationUI" />
+        <activity android:name=".Activities.IndividualChatUI" />
+        <activity android:name=".Activities.EditProfileUI" />
+        <activity android:name=".Activities.NavigationBarUI" />
+        <activity android:name=".Activities.InvitationsUI" />
+        <activity android:name=".Activities.SignUpPage" />
+        <activity android:name=".Activities.LoginUI">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".PusherMessagingService">
+            <intent-filter android:priority="1">
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
