--- a/Lonelysg/app/build.gradle
+++ b/Lonelysg/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'com.google.firebase:firebase-core:17.2.3'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
