--- a/Lonelysg/app/build.gradle
+++ b/Lonelysg/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.1.3'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.elpassion.android.commons:recycler:0.0.21'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
 }
