--- a/Lonelysg/app/build.gradle
+++ b/Lonelysg/app/build.gradle
@@ -34,16 +34,18 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.etebarian:meow-bottom-navigation-java:1.2.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:percent:28.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.firebase:firebase-auth:19.3.0'
     implementation 'com.google.firebase:firebase-core:17.2.3'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.pusher:push-notifications-android:1.6.2'
     implementation 'com.google.firebase:firebase-messaging:20.1.3'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.elpassion.android.commons:recycler:0.0.21'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.libraries.places:places:2.2.0'
 }
