--- a/Lonelysg/app/build.gradle
+++ b/Lonelysg/app/build.gradle
@@ -49,5 +49,6 @@ dependencies {
     implementation 'com.elpassion.android.commons:recycler:0.0.21'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.2.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
