--- a/Lonelysg/app/src/main/AndroidManifest.xml
+++ b/Lonelysg/app/src/main/AndroidManifest.xml
@@ -3,14 +3,14 @@
     package="com.IrisBICS.lonelysg">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/lonely_sg"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/lonely_sg_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -21,14 +21,14 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo" />
 
-        <activity android:name=".Activities.ActivityPendingRequests"></activity>
-        <activity android:name=".Activities.ActivityEditInvitation"/>
+        <activity android:name=".Activities.ActivityPendingRequests" />
+        <activity android:name=".Activities.ActivityEditInvitation" />
         <activity android:name=".Activities.ActivityIndividualUserInvitation" />
         <activity android:name=".Activities.ActivityReceivedRequests" />
         <activity android:name=".Activities.ActivityManageRequests" />
         <activity android:name=".Activities.ActivityUserInvitations" />
         <activity android:name=".Activities.ActivityCreateInvitation" />
-        <activity android:name=".Activities.ActivityManageInvitations" />
+        <activity android:name=".Activities.ActivityChat" />
         <activity android:name=".Activities.ActivityIndividualInvitation" />
         <activity android:name=".Activities.ActivityIndividualChat" />
         <activity android:name=".Activities.ActivityEditProfile" />
